@@ -1,3 +1,8 @@
+2011-05-15  Nikodemus Siivola  <nikodemus@random-state.net>
+
+	* slime-cl-indent.el (common-lisp-indent-function-1): Better #+
+	support.
+
 2011-05-15  Didier Verna  <didier@xemacs.org>
 
 	* slime-cl-indent.el (test-lisp-indent): Make sure
